--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "lahm --open",
     "build": "tsc && lahm build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "lahm preview"
+    "preview": "lahm preview",
+    "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
     "react": "^18.2.0",
